feat: add effect (Sat, Mar 11 2023 4:10 PM)

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -20,7 +20,7 @@
           <label class="accordion-label" for="accordion-item-1">
             <div class="accordion-header">
               <h2>Bing Chilling</h2>
-              <img class="accordion-check" src="./img/check.png" alt="check" width="24" height="24" />
+              <img class="accordion-check" src="./img/check.png" alt="check"/>
             </div>
             <div class="accordion-content">
               <img class="accordion-meme" src="./img/Bing_chilling.png" alt="Bing Chilling" />
@@ -34,7 +34,7 @@
           <label class="accordion-label" for="accordion-item-2">
             <div class="accordion-header">
               <h2>Follow your dream</h2>
-              <img class="accordion-check" src="./img/check.png" alt="check" width="24" height="24" />
+              <img class="accordion-check" src="./img/check.png" alt="check"/>
             </div>
             <div class="accordion-content">
               <img class="accordion-meme" src="./img/follow_your_dream.jpg" alt="Follow your dream" />
@@ -48,7 +48,7 @@
           <label class="accordion-label" for="accordion-item-3">
             <div class="accordion-header">
               <h2>1 step guide to being a badass</h2>
-              <img class="accordion-check" src="./img/check.png" alt="check" width="24" height="24" />
+              <img class="accordion-check" src="./img/check.png" alt="check"/>
             </div>
             <div class="accordion-content">
               <img class="accordion-meme" src="./img/1_step_guide_to being_a_badass.jpg" alt="1 step guide to being a badass" />
@@ -62,7 +62,7 @@
           <label class="accordion-label" for="accordion-item-4">
             <div class="accordion-header">
               <h2>There was a spider</h2>
-              <img class="accordion-check" src="./img/check.png" alt="check" width="24" height="24" />
+              <img class="accordion-check" src="./img/check.png" alt="check"/>
             </div>
             <div class="accordion-content">
               <img class="accordion-meme" src="./img/there_was_a_spider_in-the_garage.jpg" alt="There was a spider" />
@@ -76,7 +76,7 @@
           <label class="accordion-label" for="accordion-item-5">
             <div class="accordion-header">
               <h2>Wait it's all Ohio</h2>
-              <img class="accordion-check" src="./img/check.png" alt="check" width="24" height="24" />
+              <img class="accordion-check" src="./img/check.png" alt="check"/>
             </div>
             <div class="accordion-content">
               <img class="accordion-meme" src="./img/whait it's all Ohio.jpg" alt="Wait it's all Ohio" />
