fix: correct name (Sat, Mar 11 2023 4:11 PM)

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -79,7 +79,7 @@
               <img class="accordion-check" src="./img/check.png" alt="check"/>
             </div>
             <div class="accordion-content">
-              <img class="accordion-meme" src="./img/whait it's all Ohio.jpg" alt="Wait it's all Ohio" />
+              <img class="accordion-meme" src="./img/wait it's all Ohio.jpg" alt="Wait it's all Ohio" />
             </div>
           </label>
         </div>
